Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stripe Products</relationshipLabel>
    <relationshipName>Stripe_Products</relationshipName>
    <type>Lookup</type>
</CustomField>