Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Product__c/fields/Stripe_Account__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Account</label>
    <referenceTo>stripeGC__Stripe_Account__c</referenceTo>
    <relationshipLabel>Stripe Products</relationshipLabel>
    <relationshipName>Stripe_Products</relationshipName>
    <type>Lookup</type>
</CustomField>