Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Product__c/fields/Stripe_URL__c.field-meta.xml
<CustomField>
    <fullName>Stripe_URL__c</fullName>
    <label>Stripe URL</label>
    <type>Url</type>
</CustomField>